--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ repositories {
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.google.firebase.udacity.friendlychat"
@@ -40,4 +40,6 @@ dependencies {
 
     // Displaying images
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    // Add Firebase dependency
+    apply plugin: 'com.google.gms.google-services'
 }
