--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 27
     buildToolsVersion '26.0.2'
 
     defaultConfig {
@@ -35,11 +35,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:27.0.0'
+    compile 'com.android.support:appcompat-v7:27.0.0'
 
     // Displaying images
     compile 'com.github.bumptech.glide:glide:3.6.1'
     // Add Firebase dependency
-    apply plugin: 'com.google.gms.google-services'
+    compile 'com.google.firebase:firebase-database:11.6.0'
 }
+apply plugin: 'com.google.gms.google-services'
