--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 26
     buildToolsVersion '26.0.2'
 
     defaultConfig {
@@ -35,12 +35,14 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:design:27.0.0'
-    compile 'com.android.support:appcompat-v7:27.0.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
 
     // Displaying images
     compile 'com.github.bumptech.glide:glide:3.6.1'
-    // Add Firebase dependency
-    compile 'com.google.firebase:firebase-database:11.6.0'
+    // Add Firebase dependencies
+    compile 'com.google.firebase:firebase-database:11.4.2'
+    compile 'com.google.firebase:firebase-auth:11.4.2'
+    compile 'com.firebaseui:firebase-ui-auth:3.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
